parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> labels
Rule 2     labels -> labels label
Rule 3     labels -> label
Rule 4     label -> LABEL DPUNTOS instrucciones
Rule 5     instrucciones -> instrucciones instruccion
Rule 6     instrucciones -> instruccion
Rule 7     instruccion -> print_inst
Rule 8     instruccion -> goto_inst
Rule 9     instruccion -> exit_inst
Rule 10    instruccion -> unset_inst
Rule 11    instruccion -> if_inst
Rule 12    instruccion -> asig_inst
Rule 13    print_inst -> PRINT PIZQ TEMPORAL PDER PTCOMA
Rule 14    goto_inst -> GOTO LABEL PTCOMA
Rule 15    exit_inst -> EXIT PTCOMA
Rule 16    unset_inst -> UNSET PIZQ TEMPORAL PDER PTCOMA
Rule 17    if_inst -> IF PIZQ expresion_simple PDER instruccion
Rule 18    asig_inst -> asignable ASIG expresion PTCOMA
Rule 19    asig_inst -> asignable ASIG PIZQ INT PDER expresion_simple PTCOMA
Rule 20    asig_inst -> asignable ASIG PIZQ FLOAT PDER expresion_simple PTCOMA
Rule 21    asig_inst -> asignable ASIG PIZQ CHAR PDER expresion_simple PTCOMA
Rule 22    asig_inst -> asignable ASIG READ PIZQ PDER PTCOMA
Rule 23    asig_inst -> asignable ASIG ARRAY PIZQ PDER PTCOMA
Rule 24    asignable -> TEMPORAL
Rule 25    asignable -> PARAMETRO
Rule 26    asignable -> RETORNO
Rule 27    asignable -> PILA
Rule 28    asignable -> RA
Rule 29    asignable -> SP
Rule 30    asignable -> TEMPORAL CIZQ expresion_simple CDER
Rule 31    asignable -> PARAMETRO CIZQ expresion_simple CDER
Rule 32    asignable -> RETORNO CIZQ expresion_simple CDER
Rule 33    asignable -> PILA CIZQ expresion_simple CDER
Rule 34    expresion -> expresion_simple MAS expresion_simple
Rule 35    expresion -> expresion_simple MENOS expresion_simple
Rule 36    expresion -> expresion_simple POR expresion_simple
Rule 37    expresion -> expresion_simple DIVIDIDO expresion_simple
Rule 38    expresion -> expresion_simple MODULO expresion_simple
Rule 39    expresion -> expresion_simple AND expresion_simple
Rule 40    expresion -> expresion_simple OR expresion_simple
Rule 41    expresion -> expresion_simple XOR expresion_simple
Rule 42    expresion -> expresion_simple BBAND expresion_simple
Rule 43    expresion -> expresion_simple BBOR expresion_simple
Rule 44    expresion -> expresion_simple BBXOR expresion_simple
Rule 45    expresion -> expresion_simple BBIZQ expresion_simple
Rule 46    expresion -> expresion_simple BBDER expresion_simple
Rule 47    expresion -> expresion_simple IGUAL_QUE expresion_simple
Rule 48    expresion -> expresion_simple DESIGUAL_QUE expresion_simple
Rule 49    expresion -> expresion_simple MAYOR_QUE expresion_simple
Rule 50    expresion -> expresion_simple MENOR_QUE expresion_simple
Rule 51    expresion -> expresion_simple MAYOR_IGUAL_QUE expresion_simple
Rule 52    expresion -> expresion_simple MENOR_IGUAL_QUE expresion_simple
Rule 53    expresion -> expresion_simple
Rule 54    expresion -> ABS PIZQ expresion_simple PDER
Rule 55    expresion -> NOT expresion_simple
Rule 56    expresion -> BBNOT expresion_simple
Rule 57    expresion -> TEMPORAL CIZQ expresion_simple CDER
Rule 58    expresion -> PARAMETRO CIZQ expresion_simple CDER
Rule 59    expresion -> RETORNO CIZQ expresion_simple CDER
Rule 60    expresion -> PILA CIZQ expresion_simple CDER
Rule 61    expresion_simple -> TEMPORAL
Rule 62    expresion_simple -> PARAMETRO
Rule 63    expresion_simple -> RETORNO
Rule 64    expresion_simple -> PILA
Rule 65    expresion_simple -> RA
Rule 66    expresion_simple -> SP
Rule 67    expresion_simple -> ENTERO
Rule 68    expresion_simple -> DECIMAL
Rule 69    expresion_simple -> CADENA

Terminals, with rules where they appear

ABS                  : 54
AND                  : 39
ARRAY                : 23
ASIG                 : 18 19 20 21 22 23
BBAND                : 42
BBDER                : 46
BBIZQ                : 45
BBNOT                : 56
BBOR                 : 43
BBXOR                : 44
CADENA               : 69
CDER                 : 30 31 32 33 57 58 59 60
CHAR                 : 21
CIZQ                 : 30 31 32 33 57 58 59 60
DECIMAL              : 68
DESIGUAL_QUE         : 48
DIVIDIDO             : 37
DPUNTOS              : 4
ENTERO               : 67
EXIT                 : 15
FLOAT                : 20
GOTO                 : 14
IF                   : 17
IGUAL_QUE            : 47
INT                  : 19
LABEL                : 4 14
MAS                  : 34
MAYOR_IGUAL_QUE      : 51
MAYOR_QUE            : 49
MENOR_IGUAL_QUE      : 52
MENOR_QUE            : 50
MENOS                : 35
MODULO               : 38
NOT                  : 55
OR                   : 40
PARAMETRO            : 25 31 58 62
PDER                 : 13 16 17 19 20 21 22 23 54
PILA                 : 27 33 60 64
PIZQ                 : 13 16 17 19 20 21 22 23 54
POR                  : 36
PRINT                : 13
PTCOMA               : 13 14 15 16 18 19 20 21 22 23
RA                   : 28 65
READ                 : 22
RETORNO              : 26 32 59 63
SP                   : 29 66
TEMPORAL             : 13 16 24 30 57 61
UNSET                : 16
XOR                  : 41
error                : 

Nonterminals, with rules where they appear

asig_inst            : 12
asignable            : 18 19 20 21 22 23
exit_inst            : 9
expresion            : 18
expresion_simple     : 17 19 20 21 30 31 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 56 57 58 59 60
goto_inst            : 8
if_inst              : 11
init                 : 0
instruccion          : 5 6 17
instrucciones        : 4 5
label                : 2 3
labels               : 1 2
print_inst           : 7
unset_inst           : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . labels
    (2) labels -> . labels label
    (3) labels -> . label
    (4) label -> . LABEL DPUNTOS instrucciones

    LABEL           shift and go to state 4

    init                           shift and go to state 1
    labels                         shift and go to state 2
    label                          shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> labels .
    (2) labels -> labels . label
    (4) label -> . LABEL DPUNTOS instrucciones

    $end            reduce using rule 1 (init -> labels .)
    LABEL           shift and go to state 4

    label                          shift and go to state 5

state 3

    (3) labels -> label .

    LABEL           reduce using rule 3 (labels -> label .)
    $end            reduce using rule 3 (labels -> label .)


state 4

    (4) label -> LABEL . DPUNTOS instrucciones

    DPUNTOS         shift and go to state 6


state 5

    (2) labels -> labels label .

    LABEL           reduce using rule 2 (labels -> labels label .)
    $end            reduce using rule 2 (labels -> labels label .)


state 6

    (4) label -> LABEL DPUNTOS . instrucciones
    (5) instrucciones -> . instrucciones instruccion
    (6) instrucciones -> . instruccion
    (7) instruccion -> . print_inst
    (8) instruccion -> . goto_inst
    (9) instruccion -> . exit_inst
    (10) instruccion -> . unset_inst
    (11) instruccion -> . if_inst
    (12) instruccion -> . asig_inst
    (13) print_inst -> . PRINT PIZQ TEMPORAL PDER PTCOMA
    (14) goto_inst -> . GOTO LABEL PTCOMA
    (15) exit_inst -> . EXIT PTCOMA
    (16) unset_inst -> . UNSET PIZQ TEMPORAL PDER PTCOMA
    (17) if_inst -> . IF PIZQ expresion_simple PDER instruccion
    (18) asig_inst -> . asignable ASIG expresion PTCOMA
    (19) asig_inst -> . asignable ASIG PIZQ INT PDER expresion_simple PTCOMA
    (20) asig_inst -> . asignable ASIG PIZQ FLOAT PDER expresion_simple PTCOMA
    (21) asig_inst -> . asignable ASIG PIZQ CHAR PDER expresion_simple PTCOMA
    (22) asig_inst -> . asignable ASIG READ PIZQ PDER PTCOMA
    (23) asig_inst -> . asignable ASIG ARRAY PIZQ PDER PTCOMA
    (24) asignable -> . TEMPORAL
    (25) asignable -> . PARAMETRO
    (26) asignable -> . RETORNO
    (27) asignable -> . PILA
    (28) asignable -> . RA
    (29) asignable -> . SP
    (30) asignable -> . TEMPORAL CIZQ expresion_simple CDER
    (31) asignable -> . PARAMETRO CIZQ expresion_simple CDER
    (32) asignable -> . RETORNO CIZQ expresion_simple CDER
    (33) asignable -> . PILA CIZQ expresion_simple CDER

    PRINT           shift and go to state 15
    GOTO            shift and go to state 17
    EXIT            shift and go to state 18
    UNSET           shift and go to state 19
    IF              shift and go to state 20
    TEMPORAL        shift and go to state 16
    PARAMETRO       shift and go to state 22
    RETORNO         shift and go to state 23
    PILA            shift and go to state 24
    RA              shift and go to state 25
    SP              shift and go to state 26

    instrucciones                  shift and go to state 7
    instruccion                    shift and go to state 8
    print_inst                     shift and go to state 9
    goto_inst                      shift and go to state 10
    exit_inst                      shift and go to state 11
    unset_inst                     shift and go to state 12
    if_inst                        shift and go to state 13
    asig_inst                      shift and go to state 14
    asignable                      shift and go to state 21

state 7

    (4) label -> LABEL DPUNTOS instrucciones .
    (5) instrucciones -> instrucciones . instruccion
    (7) instruccion -> . print_inst
    (8) instruccion -> . goto_inst
    (9) instruccion -> . exit_inst
    (10) instruccion -> . unset_inst
    (11) instruccion -> . if_inst
    (12) instruccion -> . asig_inst
    (13) print_inst -> . PRINT PIZQ TEMPORAL PDER PTCOMA
    (14) goto_inst -> . GOTO LABEL PTCOMA
    (15) exit_inst -> . EXIT PTCOMA
    (16) unset_inst -> . UNSET PIZQ TEMPORAL PDER PTCOMA
    (17) if_inst -> . IF PIZQ expresion_simple PDER instruccion
    (18) asig_inst -> . asignable ASIG expresion PTCOMA
    (19) asig_inst -> . asignable ASIG PIZQ INT PDER expresion_simple PTCOMA
    (20) asig_inst -> . asignable ASIG PIZQ FLOAT PDER expresion_simple PTCOMA
    (21) asig_inst -> . asignable ASIG PIZQ CHAR PDER expresion_simple PTCOMA
    (22) asig_inst -> . asignable ASIG READ PIZQ PDER PTCOMA
    (23) asig_inst -> . asignable ASIG ARRAY PIZQ PDER PTCOMA
    (24) asignable -> . TEMPORAL
    (25) asignable -> . PARAMETRO
    (26) asignable -> . RETORNO
    (27) asignable -> . PILA
    (28) asignable -> . RA
    (29) asignable -> . SP
    (30) asignable -> . TEMPORAL CIZQ expresion_simple CDER
    (31) asignable -> . PARAMETRO CIZQ expresion_simple CDER
    (32) asignable -> . RETORNO CIZQ expresion_simple CDER
    (33) asignable -> . PILA CIZQ expresion_simple CDER

    LABEL           reduce using rule 4 (label -> LABEL DPUNTOS instrucciones .)
    $end            reduce using rule 4 (label -> LABEL DPUNTOS instrucciones .)
    PRINT           shift and go to state 15
    GOTO            shift and go to state 17
    EXIT            shift and go to state 18
    UNSET           shift and go to state 19
    IF              shift and go to state 20
    TEMPORAL        shift and go to state 16
    PARAMETRO       shift and go to state 22
    RETORNO         shift and go to state 23
    PILA            shift and go to state 24
    RA              shift and go to state 25
    SP              shift and go to state 26

    instruccion                    shift and go to state 27
    print_inst                     shift and go to state 9
    goto_inst                      shift and go to state 10
    exit_inst                      shift and go to state 11
    unset_inst                     shift and go to state 12
    if_inst                        shift and go to state 13
    asig_inst                      shift and go to state 14
    asignable                      shift and go to state 21

state 8

    (6) instrucciones -> instruccion .

    PRINT           reduce using rule 6 (instrucciones -> instruccion .)
    GOTO            reduce using rule 6 (instrucciones -> instruccion .)
    EXIT            reduce using rule 6 (instrucciones -> instruccion .)
    UNSET           reduce using rule 6 (instrucciones -> instruccion .)
    IF              reduce using rule 6 (instrucciones -> instruccion .)
    TEMPORAL        reduce using rule 6 (instrucciones -> instruccion .)
    PARAMETRO       reduce using rule 6 (instrucciones -> instruccion .)
    RETORNO         reduce using rule 6 (instrucciones -> instruccion .)
    PILA            reduce using rule 6 (instrucciones -> instruccion .)
    RA              reduce using rule 6 (instrucciones -> instruccion .)
    SP              reduce using rule 6 (instrucciones -> instruccion .)
    LABEL           reduce using rule 6 (instrucciones -> instruccion .)
    $end            reduce using rule 6 (instrucciones -> instruccion .)


state 9

    (7) instruccion -> print_inst .

    PRINT           reduce using rule 7 (instruccion -> print_inst .)
    GOTO            reduce using rule 7 (instruccion -> print_inst .)
    EXIT            reduce using rule 7 (instruccion -> print_inst .)
    UNSET           reduce using rule 7 (instruccion -> print_inst .)
    IF              reduce using rule 7 (instruccion -> print_inst .)
    TEMPORAL        reduce using rule 7 (instruccion -> print_inst .)
    PARAMETRO       reduce using rule 7 (instruccion -> print_inst .)
    RETORNO         reduce using rule 7 (instruccion -> print_inst .)
    PILA            reduce using rule 7 (instruccion -> print_inst .)
    RA              reduce using rule 7 (instruccion -> print_inst .)
    SP              reduce using rule 7 (instruccion -> print_inst .)
    LABEL           reduce using rule 7 (instruccion -> print_inst .)
    $end            reduce using rule 7 (instruccion -> print_inst .)


state 10

    (8) instruccion -> goto_inst .

    PRINT           reduce using rule 8 (instruccion -> goto_inst .)
    GOTO            reduce using rule 8 (instruccion -> goto_inst .)
    EXIT            reduce using rule 8 (instruccion -> goto_inst .)
    UNSET           reduce using rule 8 (instruccion -> goto_inst .)
    IF              reduce using rule 8 (instruccion -> goto_inst .)
    TEMPORAL        reduce using rule 8 (instruccion -> goto_inst .)
    PARAMETRO       reduce using rule 8 (instruccion -> goto_inst .)
    RETORNO         reduce using rule 8 (instruccion -> goto_inst .)
    PILA            reduce using rule 8 (instruccion -> goto_inst .)
    RA              reduce using rule 8 (instruccion -> goto_inst .)
    SP              reduce using rule 8 (instruccion -> goto_inst .)
    LABEL           reduce using rule 8 (instruccion -> goto_inst .)
    $end            reduce using rule 8 (instruccion -> goto_inst .)


state 11

    (9) instruccion -> exit_inst .

    PRINT           reduce using rule 9 (instruccion -> exit_inst .)
    GOTO            reduce using rule 9 (instruccion -> exit_inst .)
    EXIT            reduce using rule 9 (instruccion -> exit_inst .)
    UNSET           reduce using rule 9 (instruccion -> exit_inst .)
    IF              reduce using rule 9 (instruccion -> exit_inst .)
    TEMPORAL        reduce using rule 9 (instruccion -> exit_inst .)
    PARAMETRO       reduce using rule 9 (instruccion -> exit_inst .)
    RETORNO         reduce using rule 9 (instruccion -> exit_inst .)
    PILA            reduce using rule 9 (instruccion -> exit_inst .)
    RA              reduce using rule 9 (instruccion -> exit_inst .)
    SP              reduce using rule 9 (instruccion -> exit_inst .)
    LABEL           reduce using rule 9 (instruccion -> exit_inst .)
    $end            reduce using rule 9 (instruccion -> exit_inst .)


state 12

    (10) instruccion -> unset_inst .

    PRINT           reduce using rule 10 (instruccion -> unset_inst .)
    GOTO            reduce using rule 10 (instruccion -> unset_inst .)
    EXIT            reduce using rule 10 (instruccion -> unset_inst .)
    UNSET           reduce using rule 10 (instruccion -> unset_inst .)
    IF              reduce using rule 10 (instruccion -> unset_inst .)
    TEMPORAL        reduce using rule 10 (instruccion -> unset_inst .)
    PARAMETRO       reduce using rule 10 (instruccion -> unset_inst .)
    RETORNO         reduce using rule 10 (instruccion -> unset_inst .)
    PILA            reduce using rule 10 (instruccion -> unset_inst .)
    RA              reduce using rule 10 (instruccion -> unset_inst .)
    SP              reduce using rule 10 (instruccion -> unset_inst .)
    LABEL           reduce using rule 10 (instruccion -> unset_inst .)
    $end            reduce using rule 10 (instruccion -> unset_inst .)


state 13

    (11) instruccion -> if_inst .

    PRINT           reduce using rule 11 (instruccion -> if_inst .)
    GOTO            reduce using rule 11 (instruccion -> if_inst .)
    EXIT            reduce using rule 11 (instruccion -> if_inst .)
    UNSET           reduce using rule 11 (instruccion -> if_inst .)
    IF              reduce using rule 11 (instruccion -> if_inst .)
    TEMPORAL        reduce using rule 11 (instruccion -> if_inst .)
    PARAMETRO       reduce using rule 11 (instruccion -> if_inst .)
    RETORNO         reduce using rule 11 (instruccion -> if_inst .)
    PILA            reduce using rule 11 (instruccion -> if_inst .)
    RA              reduce using rule 11 (instruccion -> if_inst .)
    SP              reduce using rule 11 (instruccion -> if_inst .)
    LABEL           reduce using rule 11 (instruccion -> if_inst .)
    $end            reduce using rule 11 (instruccion -> if_inst .)


state 14

    (12) instruccion -> asig_inst .

    PRINT           reduce using rule 12 (instruccion -> asig_inst .)
    GOTO            reduce using rule 12 (instruccion -> asig_inst .)
    EXIT            reduce using rule 12 (instruccion -> asig_inst .)
    UNSET           reduce using rule 12 (instruccion -> asig_inst .)
    IF              reduce using rule 12 (instruccion -> asig_inst .)
    TEMPORAL        reduce using rule 12 (instruccion -> asig_inst .)
    PARAMETRO       reduce using rule 12 (instruccion -> asig_inst .)
    RETORNO         reduce using rule 12 (instruccion -> asig_inst .)
    PILA            reduce using rule 12 (instruccion -> asig_inst .)
    RA              reduce using rule 12 (instruccion -> asig_inst .)
    SP              reduce using rule 12 (instruccion -> asig_inst .)
    LABEL           reduce using rule 12 (instruccion -> asig_inst .)
    $end            reduce using rule 12 (instruccion -> asig_inst .)


state 15

    (13) print_inst -> PRINT . PIZQ TEMPORAL PDER PTCOMA

    PIZQ            shift and go to state 28


state 16

    (24) asignable -> TEMPORAL .
    (30) asignable -> TEMPORAL . CIZQ expresion_simple CDER

    ASIG            reduce using rule 24 (asignable -> TEMPORAL .)
    CIZQ            shift and go to state 29


state 17

    (14) goto_inst -> GOTO . LABEL PTCOMA

    LABEL           shift and go to state 30


state 18

    (15) exit_inst -> EXIT . PTCOMA

    PTCOMA          shift and go to state 31


state 19

    (16) unset_inst -> UNSET . PIZQ TEMPORAL PDER PTCOMA

    PIZQ            shift and go to state 32


state 20

    (17) if_inst -> IF . PIZQ expresion_simple PDER instruccion

    PIZQ            shift and go to state 33


state 21

    (18) asig_inst -> asignable . ASIG expresion PTCOMA
    (19) asig_inst -> asignable . ASIG PIZQ INT PDER expresion_simple PTCOMA
    (20) asig_inst -> asignable . ASIG PIZQ FLOAT PDER expresion_simple PTCOMA
    (21) asig_inst -> asignable . ASIG PIZQ CHAR PDER expresion_simple PTCOMA
    (22) asig_inst -> asignable . ASIG READ PIZQ PDER PTCOMA
    (23) asig_inst -> asignable . ASIG ARRAY PIZQ PDER PTCOMA

    ASIG            shift and go to state 34


state 22

    (25) asignable -> PARAMETRO .
    (31) asignable -> PARAMETRO . CIZQ expresion_simple CDER

    ASIG            reduce using rule 25 (asignable -> PARAMETRO .)
    CIZQ            shift and go to state 35


state 23

    (26) asignable -> RETORNO .
    (32) asignable -> RETORNO . CIZQ expresion_simple CDER

    ASIG            reduce using rule 26 (asignable -> RETORNO .)
    CIZQ            shift and go to state 36


state 24

    (27) asignable -> PILA .
    (33) asignable -> PILA . CIZQ expresion_simple CDER

    ASIG            reduce using rule 27 (asignable -> PILA .)
    CIZQ            shift and go to state 37


state 25

    (28) asignable -> RA .

    ASIG            reduce using rule 28 (asignable -> RA .)


state 26

    (29) asignable -> SP .

    ASIG            reduce using rule 29 (asignable -> SP .)


state 27

    (5) instrucciones -> instrucciones instruccion .

    PRINT           reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    EXIT            reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    TEMPORAL        reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    PARAMETRO       reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    RETORNO         reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    PILA            reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    RA              reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    SP              reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    LABEL           reduce using rule 5 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 5 (instrucciones -> instrucciones instruccion .)


state 28

    (13) print_inst -> PRINT PIZQ . TEMPORAL PDER PTCOMA

    TEMPORAL        shift and go to state 38


state 29

    (30) asignable -> TEMPORAL CIZQ . expresion_simple CDER
    (61) expresion_simple -> . TEMPORAL
    (62) expresion_simple -> . PARAMETRO
    (63) expresion_simple -> . RETORNO
    (64) expresion_simple -> . PILA
    (65) expresion_simple -> . RA
    (66) expresion_simple -> . SP
    (67) expresion_simple -> . ENTERO
    (68) expresion_simple -> . DECIMAL
    (69) expresion_simple -> . CADENA

    TEMPORAL        shift and go to state 39
    PARAMETRO       shift and go to state 41
    RETORNO         shift and go to state 42
    PILA            shift and go to state 43
    RA              shift and go to state 44
    SP              shift and go to state 45
    ENTERO          shift and go to state 46
    DECIMAL         shift and go to state 47
    CADENA          shift and go to state 48

    expresion_simple               shift and go to state 40

state 30

    (14) goto_inst -> GOTO LABEL . PTCOMA

    PTCOMA          shift and go to state 49


state 31

    (15) exit_inst -> EXIT PTCOMA .

    PRINT           reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    GOTO            reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    EXIT            reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    UNSET           reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    IF              reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    TEMPORAL        reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    PARAMETRO       reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    RETORNO         reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    PILA            reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    RA              reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    SP              reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    LABEL           reduce using rule 15 (exit_inst -> EXIT PTCOMA .)
    $end            reduce using rule 15 (exit_inst -> EXIT PTCOMA .)


state 32

    (16) unset_inst -> UNSET PIZQ . TEMPORAL PDER PTCOMA

    TEMPORAL        shift and go to state 50


state 33

    (17) if_inst -> IF PIZQ . expresion_simple PDER instruccion
    (61) expresion_simple -> . TEMPORAL
    (62) expresion_simple -> . PARAMETRO
    (63) expresion_simple -> . RETORNO
    (64) expresion_simple -> . PILA
    (65) expresion_simple -> . RA
    (66) expresion_simple -> . SP
    (67) expresion_simple -> . ENTERO
    (68) expresion_simple -> . DECIMAL
    (69) expresion_simple -> . CADENA
